--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 						<!-- Start text slide -->
 						
 						<div class="mu-featured-content">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsa necessitatibus voluptate. Dolores sed neque, accusantium iusto inventore harum quibusdam, aspernatur, ullam vero ea eos ipsam tenetur dolore qui voluptatibus!</p>
+							<p>My name is Jaypee Torrefranca. I can be <strong>Web Designer</strong> and <strong>Web Developer</strong>. I study in <strong>Philippine Advent College</strong> taking course of <strong>Bachelor of Science in Computer Science</strong></p>
+
 							<a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn">VIEW MY WORK</a>
 						</div>
 
@@ -427,7 +428,7 @@
 												<div class="col-sm-4">
 													<div class="mu-contact-top-single">
 														<div class="mu-icon"><i class="fa fa-envelope"></i></div>
-														<p>https://jjul30.github.io/My-site</p>
+														<p>qjayeen@gmail.com</p>
 													</div>
 												</div>
 
