--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 	</footer>
 	<!-- End footer -->
 
-	
+	<script data-ad-client="ca-pub-6719151863403930" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
