--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	<script data-ad-client="ca-pub-4941131371281299" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,7 +56,7 @@
 		      </button>
 
 		      <!-- Text Logo -->
-		      <a class="navbar-brand" href="#">Jaypee</a>
+		      <a class="navbar-brand" href="#"><img src="assets/images/jaypeelogo.jpg" alt=""></a>
 
 		      <!-- Image Logo -->
 		      <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
@@ -313,12 +314,12 @@
 
 					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
 					                	<div class="mu-item-thumbonail">
-					                		<img class="img-responsive" src="assets/images/portfolio/img-7.jpg" alt="image">
+					                		<img class="img-responsive" src="assets/images/portfolio/img-4.jpeg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
 					                    	<h4 class="mu-filter-item-title">WEB DEVELOPMENT</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
-					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-7.jpg" title="WEB DEVELOPMENT"><i class="fa fa-search"></i></a>
+					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-4.jpeg" title="WEB DEVELOPMENT"><i class="fa fa-search"></i></a>
 					                    </div>
 					                </div>
 
@@ -326,12 +327,12 @@
 
 					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3">
 					                	<div class="mu-item-thumbonail">
-					                		<img class="img-responsive" src="assets/images/portfolio/img-9.jpeg" alt="image">
+					                		<img class="img-responsive" src="assets/images/portfolio/img-5.jpeg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
 					                    	<h4 class="mu-filter-item-title">GRAPHICS DESIGN</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
-					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-9.jpeg" title="GRAPHICS DESIGN"><i class="fa fa-search"></i></a>
+					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-5.jpeg" title="GRAPHICS DESIGN"><i class="fa fa-search"></i></a>
 					                    </div>
 					                </div>
 
@@ -481,7 +482,6 @@
 	</footer>
 	<!-- End footer -->
 
-	<script data-ad-client="ca-pub-6719151863403930" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
