--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 						<div class="mu-portfolio-area">
 
 							<div class="mu-portfolio-header">
-								<h2 class="mu-heading-title">Bible Verse</h2>
+								<h2 class="mu-heading-title">My Picture</h2>
 								<span class="mu-header-dot"></span>
 							</div>
 
@@ -268,9 +268,9 @@
 							<div class="mu-portfolio-filter-area">
 								<ul class="mu-simplefilter">
 					                <li class="active" data-filter="all">All</li>
-					                <li data-filter="1">Inspirational</li>
-					                <li data-filter="2">Love of God</li>
-					                <li data-filter="3">The Commandments</li>
+					                <li data-filter="1">2021</li>
+					                <li data-filter="2">2022</li>
+					                <li data-filter="3">2025</li>
 					         
 					            </ul>
 							</div>
@@ -284,7 +284,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-1.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">Inspirational</h4>
+					                    	<h4 class="mu-filter-item-title">2021</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-1.jpg" title="Web Development"><i class="fa fa-search"></i></a>
 					                    </div>
@@ -295,7 +295,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-4.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">Love Of God</h4>
+					                    	<h4 class="mu-filter-item-title">2022</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-4.jpg" title="UI/UX DESIGN"><i class="fa fa-search"></i></a>
 					                    </div>
@@ -306,7 +306,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-5.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">Love Of God</h4>
+					                    	<h4 class="mu-filter-item-title">2021</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-5.jpg" title="UI/UX DESIGN"><i class="fa fa-search"></i></a>
 					                    </div>
@@ -317,7 +317,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-6.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">Love Of God</h4>
+					                    	<h4 class="mu-filter-item-title">2025</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-6.jpg" title="UI/UX DESIGN"><i class="fa fa-search"></i></a>
 					                    </div>
@@ -328,7 +328,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-8.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">The Commandments</h4>
+					                    	<h4 class="mu-filter-item-title">2025</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-8.jpg" title="GRAPHICS DESIGN"><i class="fa fa-search"></i></a>
 					                    </div>
@@ -342,7 +342,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-2.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">Inspirational</h4>
+					                    	<h4 class="mu-filter-item-title">2021</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-2.jpg" title="WEB DEVELOPMENT"><i class="fa fa-search"></i></a>
 					                    </div>
@@ -353,7 +353,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-3.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">Inspirational</h4>
+					                    	<h4 class="mu-filter-item-title">2022</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-3.jpg" title="WEB DEVELOPMENT"><i class="fa fa-search"></i></a>
 					                    </div>
@@ -365,7 +365,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-9.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">The Commandments</h4>
+					                    	<h4 class="mu-filter-item-title">2025</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-9.jpg" title="GRAPHICS DESIGN"><i class="fa fa-search"></i></a>
 					                    </div>
@@ -378,7 +378,7 @@
 					                		<img class="img-responsive" src="assets/images/portfolio/img-7.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">The Commandments</h4>
+					                    	<h4 class="mu-filter-item-title">2025</h4>
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-7.jpg" title="GRAPHICS DESIGN"><i class="fa fa-search"></i></a>
 					                    </div>
