--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
 						                  	<!-- Start Social Media -->
 						                  	<div class="mu-social-media">
 						                  		<h3>Social</h3>
-						                  		<a href="#"><i class="fa fa-facebook"></i></a>
+						                  		<a href="https://www.facebook.com/jaypee.torrefranca.7"><i class="fa fa-facebook"></i></a>
 						                  		<a href="#"><i class="fa fa-twitter"></i></a>
-						                  		<a href="#"><i class="fa fa-linkedin"></i></a>
+						                  		<a href="https://www.linkedin.com/in/jaypee-t-409081114/"><i class="fa fa-linkedin"></i></a>
 						                  		<a href="#"><i class="fa fa-google-plus"></i></a>
 						                  	</div>
 
 						                  	<!-- Download Ressume Button -->
-						                  	<a href="#" class="mu-resume-btn">Download My Resume</a>
+						                  	<a href="assets/Jaypee Resume.pdf" class="mu-resume-btn">Download My Resume</a>
 
 										</div>
 									</div>
